word wrap css fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -787,7 +787,7 @@ A:hover
   position: relative;
   
   cursor: pointer;
-  padding: 8px 30px 8px 8px;
+  padding: 8px 30px 8px 18px;
   margin: 3px 0px 0px 0px;
   
   background: #eee;
@@ -850,7 +850,9 @@ A:hover
 
 #tabs #comment_annos_block .comment_showhide
 {
-  
+  position: absolute;
+  top: 8px;
+  left: 8px;
 }
 
 #tabs .comment_text a.delete-annotation
